Data display and saving functionalities were implemented

--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4      1      1       1  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "<Axes: title={'center': \"Box plot of the variable 'Age'\"}>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "0.67"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "Text(0.5, 1.0, 'Age and Survived')"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -779,16 +779,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x141b66749d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x141b4b376d0>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "4         1  female       1              Mrs       False"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        " array(['Master', 'Miss', 'Mr', 'Mrs', 'Other'], dtype=object)]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1358,6 +1358,83 @@
    ],
    "source": [
     "df_passengers.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection of the best prediction model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_metrics_list=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metrics_from_model(name,model,X_test,y_test,X_train,y_train):\n",
+    "    cv_scores = cross_val_score(model, X_train, np.ravel(y_train), cv = 5)\n",
+    "    return dict(\n",
+    "            name=name\n",
+    "            ,accuracy=round(accuracy_score(y_test, model.predict(X_test)),2)\n",
+    "            ,precision=round(precision_score(y_test, model.predict(X_test)),2)\n",
+    "            ,recall=round(recall_score(y_test, model.predict(X_test)),2)\n",
+    "            ,f1_score=round(f1_score(y_test, model.predict(X_test)),2)\n",
+    "            ,cv_scores=cv_scores\n",
+    "            ,mean_cross_validation=round(np.mean(cv_scores),2)\n",
+    "            ,cross_validation_standard_dev=round(np.std(cv_scores),2)\n",
+    "        )\n",
+    "    \n",
+    "def store_evaluation_metrics(name,model,X_test,y_test,X_train,y_train):\n",
+    "    model_metrics_list.append(\n",
+    "        get_metrics_from_model(name,model,X_test,y_test,X_train,y_train)\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_rater_metrics(data):\n",
+    "    print('classifier accuracy : ',data[\"accuracy\"])\n",
+    "    print('classifier precision : ',data[\"precision\"])\n",
+    "    print('classifier recall : ',data[\"recall\"])\n",
+    "    print('classifier f1_score : ',data[\"f1_score\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def show_cross_validation_validation_metrics(data):\n",
+    "    cv_scores = data[\"cv_scores\"]\n",
+    "    print(cv_scores)\n",
+    "    print( \"Average accuracy {0: 0.2f}, standard deviation {1: 0.2f}\".format(data[\"mean_cross_validation\"], data[\"cross_validation_standard_dev\"]) )        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_confusion_matrix(model,y_test,X_test):\n",
+    "    print('classifier confusion matrix : \\n {0}'.format(confusion_matrix(y_test, model.predict(X_test))))"
    ]
   },
   {
