--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -2910,6 +2910,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hyperparameter setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search(params, model=DecisionTreeClassifier(random_state=0)):\n",
+    "\n",
+    "    grid_reg = GridSearchCV(model, params, n_jobs=-1)\n",
+    "    \n",
+    "    grid_reg.fit(X_train, y_train)\n",
+    "\n",
+    "    best_params = grid_reg.best_params_\n",
+    "    \n",
+    "    print(\"The best params:\", best_params)\n",
+    "    \n",
+    "    best_score = grid_reg.best_score_\n",
+    "\n",
+    "    print(\"Best score: {0:.3f}\".format(best_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Creative Commons License\n",
     "\n",
     "This project is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International](https://creativecommons.org/licenses/by-nc/4.0/) license.\n",
