--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -4384,6 +4384,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Random Forest "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Creative Commons License\n",
     "\n",
     "This project is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International](https://creativecommons.org/licenses/by-nc/4.0/) license.\n",
