The best machine-learning model was analyzed and selected

--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -7083,6 +7083,264 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>cv_scores</th>\n",
+       "      <th>mean_cross_validation</th>\n",
+       "      <th>cross_validation_standard_dev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree with feature selection</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Decision Tree max depth=4</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decision Tree min samples leaf=1, max depth=5</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Random Forest n_estimators_default</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Random forest best n_estimators=5</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>[0.8035714285714286, 0.8035714285714286, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Random Forest max_depth=5, n_estimators=5</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Base Tree</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>[0.8660714285714286, 0.8214285714285714, 0.767...</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            name  accuracy  precision  recall  \\\n",
+       "1           Decision Tree with feature selection      0.81       0.96    0.53   \n",
+       "2                      Decision Tree max depth=4      0.81       0.96    0.53   \n",
+       "3  Decision Tree min samples leaf=1, max depth=5      0.81       0.96    0.53   \n",
+       "4             Random Forest n_estimators_default      0.81       0.96    0.53   \n",
+       "5              Random forest best n_estimators=5      0.82       0.83    0.67   \n",
+       "6      Random Forest max_depth=5, n_estimators=5      0.82       0.83    0.67   \n",
+       "0                                      Base Tree      0.82       0.85    0.67   \n",
+       "\n",
+       "   f1_score                                          cv_scores  \\\n",
+       "1      0.68  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "2      0.68  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "3      0.68  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "4      0.68  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "5      0.74  [0.8035714285714286, 0.8035714285714286, 0.776...   \n",
+       "6      0.74  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "0      0.75  [0.8660714285714286, 0.8214285714285714, 0.767...   \n",
+       "\n",
+       "   mean_cross_validation  cross_validation_standard_dev  \n",
+       "1                   0.79                           0.01  \n",
+       "2                   0.79                           0.01  \n",
+       "3                   0.79                           0.01  \n",
+       "4                   0.79                           0.01  \n",
+       "5                   0.79                           0.01  \n",
+       "6                   0.79                           0.01  \n",
+       "0                   0.82                           0.03  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_metrics_df=pd.DataFrame(model_metrics_list).sort_values(by=\"cross_validation_standard_dev\")\n",
+    "model_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To adequately address the sensitivity of decision trees to overfitting and the potential replication of errors in random forests, a thorough cross-validation was performed on all the models considered. This process allowed us to assess the stability and consistency of the models, which is crucial to minimize the risk of overfitting.\n",
+    "\n",
+    "Cross-validation focused on reducing the variability of the results. Lower variability during this process indicates that the model has a better generalization capability and is not overfitting the training data. In addition, special attention was paid to the evaluation metrics, specifically the F1 score, because of its ability to balance accuracy and recall.\n",
+    "\n",
+    "In the context of our problem, it is critical to keep both recall and precision high. Higher recall ensures that as many survivors as possible are identified, minimizing the risk of leaving them unrescued. On the other hand, higher accuracy ensures that time and resources are not wasted on false alarms, thus improving rescue efficiency.\n",
+    "\n",
+    "After evaluating multiple configurations, the best performing model was a random forest with a max_depth of 5 and n_estimators of 5 (ensembled decision trees). This model demonstrated not only the lowest variability during cross-validation, but also the highest F1 score, indicating an optimal balance between accuracy and recall.\n",
+    "\n",
+    "classifier accuracy :  0.82\n",
+    "\n",
+    "classifier precision :  0.83\n",
+    "\n",
+    "classifier recall :  0.67\n",
+    "\n",
+    "classifier f1_score :  0.74\n",
+    "\n",
+    "[0.80357143 0.77678571 0.77678571 0.78571429 0.80357143]\n",
+    "\n",
+    "Average accuracy  0.79, standard deviation  0.01\n",
+    "\n",
+    "classifier confusion matrix : \n",
+    "\n",
+    " [[134  13]\n",
+    "\n",
+    " [ 31  62]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>cv_scores</th>\n",
+       "      <th>mean_cross_validation</th>\n",
+       "      <th>cross_validation_standard_dev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Random Forest max_depth=5, n_estimators=5</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>[0.8035714285714286, 0.7767857142857143, 0.776...</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        name  accuracy  precision  recall  \\\n",
+       "6  Random Forest max_depth=5, n_estimators=5      0.82       0.83    0.67   \n",
+       "\n",
+       "   f1_score                                          cv_scores  \\\n",
+       "6      0.74  [0.8035714285714286, 0.7767857142857143, 0.776...   \n",
+       "\n",
+       "   mean_cross_validation  cross_validation_standard_dev  \n",
+       "6                   0.79                           0.01  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_metrics_df[model_metrics_df[\"name\"]==\"Random Forest max_depth=5, n_estimators=5\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
